--- a/webui/css/modals.css
+++ b/webui/css/modals.css
@@ -12,7 +12,7 @@ the old and the new system. */
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2000;
+  z-index: 5000;
 }
 .modal.show {
   display: block;
@@ -49,7 +49,7 @@ the old and the new system. */
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2001;
+  z-index: 5001;
 }
 
 /* Modal Backdrop */
